--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Data generator</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="stylesheets/styles.css">
     </head>
     <body>
         <h1>Data generator</h1>
